# adk_playground

./: .env_example  .gitignore  .pre-commit-config.yaml  README.md  config.toml  pyproject.toml
adk_playground/: __init__.py  agent.py  config.py  pyproject.toml  tools.py
tests/: test_agent.py  test_config.py  test_tools.py
