[project]
name = "adk-playground"
version = "0.1.0"
description = "Agent Development Kit Playground"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopy>=2.4.1",
    "google-adk>=0.1.0",
    "openmeteo-requests>=1.4.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "tabulate>=0.9.0",
    "tomli>=2.2.1",
    "tzwhere>=3.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
